tests/paczka1/small_fuzzy/26704596.err
Error in line 1: 7dChamE S788 57,5
Error in line 10: S788 A261 62,6
